--- a/scherzo/tracks/templates/base.html
+++ b/scherzo/tracks/templates/base.html
@@ -4,6 +4,7 @@
 <head>
 	<title>{% block title %}Scherzo{% endblock %}</title>
 	<link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
 	<div id="header">
@@ -21,6 +22,7 @@
 		{% endblock %}
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script>
 		$(document).ready(function() {
 			{% block domready %}
