--- a/scherzo/tracks/templates/base.html
+++ b/scherzo/tracks/templates/base.html
@@ -7,16 +7,22 @@
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
-	<div id="header">
-		<a href="/" class="logo">Scherzo</a>
-		<ul class="menu">
-			{% if request.user.is_authenticated %}
-				<li><a href="{% url 'logout' %}">Sign out</a></li>
-			{% else %}
-				<li><a href="{% url 'login' %}">Sign in</a></li>
-			{% endif %}
-		</ul>
-	</div>
+	<nav class="navbar alert-info">
+		<div class="container">
+			<div class="navbar-header">
+				<a href="/" class="navbar-brand">Scherzo</a>
+			</div>
+			<div id="navbar" class="navbar-collapse collapse">
+				<ul class="nav navbar-right">
+					{% if request.user.is_authenticated %}
+						<li><a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-out"></span> Sign out</a></li>
+					{% else %}
+						<li><a href="{% url 'login' %}"><span class="glyphicon glyphicon-log-in"></span> Sign in</a></li>
+					{% endif %}
+				</ul>
+			</div>
+		</div>
+	</nav>
 	<div id="content">
 		{% block content %}
 		{% endblock %}
