--- a/scherzo/tracks/templates/base.html
+++ b/scherzo/tracks/templates/base.html
@@ -10,7 +10,7 @@
 	<nav class="navbar alert-info">
 		<div class="container">
 			<div class="navbar-header">
-				<a href="/" class="navbar-brand">Scherzo</a>
+				<a href="/" class="navbar-brand"><span class="glyphicon glyphicon-music"></span> Scherzo</a>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-right">
