--- a/scherzo/tracks/templates/registration/login.html
+++ b/scherzo/tracks/templates/registration/login.html
@@ -1,22 +1,24 @@
 {% extends 'base.html' %}
 
-{% block title %}Log-in{% endblock %}
+{% block title %}Login{% endblock %}
 
 {% block content %}
+	<div class="container">
 	<h1>Log-in</h1>
-	<div class="module">
 		{% if form.errors %}
 			<p>Your username and password didn't match.  Please try again.</p>
 		{% else %}
 			<p>Please use the following form to log-in:</p>
 		{% endif %}
-		<div class="login-form">
-			<form action="{% url 'login' %}" method="post">
+
+		<form action="{% url 'login' %}" method="post">
+			<div class="form-group">
 				{{ form.as_p }}
 				{% csrf_token %}
 				<input type="hidden" name="next" value="{{ next }}" />
-				<p><input type="submit" value="Login-in"></p>
-			</form>
-		</div>
+			</div>
+			<p><input class="btn btn-primary" type="submit" value="Login"></p>
+		</form>
+
 	</div>
 {% endblock %}
