--- a/scherzo/tracks/templates/courses/course/detail.html
+++ b/scherzo/tracks/templates/courses/course/detail.html
@@ -12,7 +12,7 @@
         <div class="module">
             <h2>Overview</h2>
             <p>
-                <a href="{% url "course_list_subject" track.slug %}">{{ track.title }}</a>.
+                <a href="{% url 'course_list_subject' track.slug %}">{{ track.title }}</a>.
                 {{ course.modules.count }} modules.
                 Instructor: {{ course.owner.get_full_name }}
             </p>
