--- a/scherzo/tracks/templates/courses/manage/module/formset.html
+++ b/scherzo/tracks/templates/courses/manage/module/formset.html
@@ -9,7 +9,7 @@
 	<div class="module">
 		<h2>Course modules</h2>
 		<form action="" method="post">
-			{{ formset }}
+			{{ formset.as_p }}
 			{{ formset.management_form }}
 			{% csrf_token %}
 			<input type="submit" class="button" value="Save modules">
